--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">GMoriApp</string>
+
+    <string name="error_io">通信エラーが発生しました。ネットワーク接続を確認してください。</string>
+    <string name="error_http">サーバーからの応答に問題があります。エラーコード: %1$d</string>
+    <string name="error_parse">データの解析中にエラーが発生しました。</string>
+    <string name="error_unknown">予期しないエラーが発生しました。再試行してください。</string>
+    <string name="error_bad_request">リクエストが無効です。入力内容を確認してください。</string>
+    <string name="error_forbidden">アクセスが拒否されました。この操作を行う権限がありません。</string>
+    <string name="error_not_found">リソースが見つかりません。URLが正しいか確認してください。</string>
+    <string name="error_server">サーバーに問題が発生しました。後で再試行してください。</string>
+    <string name="user_list">リスト\n</string>
+    <string name="user_detail">詳細</string>
 </resources>
